examples/test/testpolicy18314.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18314
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key34: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value38
          key7: value31
          key8: value4
      podSelector:
        matchLabels:
          key33: value29
          key45: value21
          key34: value11
